--- a/public/index.css
+++ b/public/index.css
@@ -97,7 +97,7 @@ body {
   border-radius: 7px;
   font-size: 16px;
   font-weight: 500;
-  background-color: yellow;
+  background-color: rgb(224, 224, 224);
 }
 
 .main-title {
